# veyron-sdk-python

./: .gitignore  README.md  pyproject.toml
examples/: echo_plugin.py
fuzz/: fuzz_framing.py
proto/: veyron_protocol.proto
veyron/: __init__.py  client.py  framing.py  plugin.py  veyron_protocol_pb2.py
