[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veyron-sdk"
version = "0.1.1"
description = "Veyron plugin SDK for Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "veyron-core", email = "btemirkhodjaev@gmail.com" },
]
keywords = ["veyron", "plugin", "ipc", "sdk", "kernel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # pb2 regenerated with protoc 35.1 (gencode 7.35.1); runtime major must match.
    "protobuf>=7.35.1",
    # decompress FLAG_COMPRESSED frames (kernel zstd-compresses payloads >= 64 KiB)
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.50",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
fuzz = [
    # T-14: fuzz/fuzz_framing.py harness for veyron.framing.read_frame.
    "atheris>=2.3; platform_system != 'Windows'",
]

[project.urls]
Homepage = "https://github.com/veyron-core/veyron"
Repository = "https://github.com/veyron-core/veyron"
Documentation = "https://github.com/veyron-core/veyron/blob/main/docs"
Issues = "https://github.com/veyron-core/veyron/issues"

[tool.hatch.build.targets.wheel]
packages = ["veyron"]
